##################################################
# File     : Makefile.am
# Purpose  : Makefile inputs
##################################################
SUBDIRS = app  # \
          #tools/valgrind \
          #tools/gdb \
          #tools/strace
          
	  
ACLOCAL_AMFLAGS = -I m4

DIST_SUBDIRS = app # \
		#tools/valgrind \
               #tools/gdb \
               #tools/strace
	    
EXTRA_DIST=autogen.sh
